# pandas-booster

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SYNTHESIS.md  README.md  RESEARCH_COMPLETION_SUMMARY.md  RESEARCH_INDEX.md  build.rs  pyproject.toml  pyrightconfig.json  test_pandas_semantics.py
.github/workflows/: ci.yml  publish.yml  supply-chain-audit.yml
benches/: bench_utils.py  benchmark.py  benchmark_multi_key.py  datasets.py
benchmarks/: bench_utils.py  benchmark.py  cli.py  dispatch.py  generate_docs.py  profile_json.py  profile_json_payload.py  reporting.py  reporting_constants.py  reporting_documents.py  reporting_io.py  reporting_stats.py  reporting_tables.py  runner.py  runner_worker.py
benchmarks/reports/: README.md  count.md  max.md  mean.md  median.md  min.md  prod.md  std.md  sum.md  var.md
examples/: pandas_semantics_probe.py
python/pandas_booster/: __init__.py  _abi_compat.py  _config.py  _groupby_accel.py  _groupby_execution.py  _groupby_policy.py  _groupby_result.py  _rust.pyi  accessor.py  proxy.py
scripts/: check_release_contract.py  summarize_cargo_timings.py  supply_chain_audit.py  supply_chain_audit.sh  supply_chain_comment.py
src/: aggregation.rs  groupby.rs  groupby_multi.rs  lib.rs  radix_groupby.rs  radix_sort.rs  zero_copy.rs
src/groupby/: api.rs  api_count.rs  api_f64.rs  api_f64_stats.rs  api_float_tests.rs  api_i64.rs  api_i64_tests.rs  chunks.rs  determinism_tests.rs  deterministic.rs  engine.rs  engine_tests.rs  legacy.rs  mod.rs  order.rs  partitioned.rs  profile.rs  reduce.rs  result.rs  routing.rs  routing_tests.rs  scalar_firstseen.rs  test_support.rs
src/python_wrappers/: convert.rs  mod.rs  register.rs  shared.rs
src/python_wrappers/multi/: firstseen_f64.rs  firstseen_i64.rs  generated.rs  mod.rs  sorted_f64.rs  sorted_i64.rs  unsorted_f64.rs  unsorted_i64.rs
src/python_wrappers/single/: abi.rs  firstseen_f64_u32.rs  firstseen_f64_u64.rs  firstseen_i64.rs  generated.rs  mod.rs  sorted_f64.rs  sorted_i64.rs  unsorted.rs
src/radix_groupby/: api.rs  api_basic_tests.rs  api_sorted.rs  api_stats_tests.rs  dispatch.rs  dispatch_tests.rs  engine.rs  firstseen_u32.rs  firstseen_u64.rs  keys.rs  mod.rs  order.rs  order_tests.rs  partition.rs  partition_tests.rs  result.rs  test_support.rs
tests/: conftest.py  test_benchmark_cli.py  test_edge_cases.py  test_groupby.py  test_groupby_abi_skew_2d_keys.py  test_groupby_abi_skew_integer_results.py  test_groupby_compatibility.py  test_groupby_dispatch_contract.py  test_groupby_multi.py  test_index_dtype.py  test_monkey_patch.py  test_python39_annotation_compat.py  test_readme_benchmark_metadata.py  test_release_contract.py  test_rust_sort_toggle.py  test_rust_stub_exports.py  test_sort_false_determinism.py  test_sort_false_order_contract.py  test_sort_false_partitioned_determinism.py  test_structure_refactor_contracts.py  test_subprocess_pythonpath.py  test_summarize_cargo_timings.py  test_supply_chain_audit_ci.py  test_supply_chain_native_scripts.py  test_wheel_smoke_mode.py
tests/benchmark/: _report_output_helpers.py  conftest.py  test_cli_contract.py  test_dispatch_description.py  test_profile_json.py  test_report_output_conflicts.py  test_report_output_contracts.py  test_report_output_stats.py  test_worker_boundary.py
tests/edge_cases/: _helpers.py  test_cardinality_and_negative_keys.py  test_dtype_fallback.py  test_empty_threshold.py  test_infinite_overflow.py  test_median_abi_contracts.py  test_median_dispatch_contracts.py  test_median_extremes.py  test_median_fallback_contracts.py  test_median_rollback_contracts.py  test_operation_consistency.py  test_prod_dispatch_contracts.py  test_prod_fallback_contracts.py  test_prod_numeric_contracts.py  test_std_var_abi.py  test_std_var_dispatch.py  test_std_var_fallbacks.py  test_std_var_ordering.py
tests/groupby/: test_multi_basic.py  test_multi_edges.py  test_multi_firstseen_order.py  test_multi_median.py  test_multi_nan.py  test_multi_prod.py  test_multi_sort_parameter.py  test_multi_std_var.py  test_single_basic.py  test_single_cardinality.py  test_single_median.py  test_single_nan_and_dtype.py  test_single_ordering.py  test_single_prod.py  test_single_std_var.py
tests/release/: __init__.py  _helpers.py  test_build_profile_guardrails.py  test_cli_dispatch.py  test_metadata_contract.py  test_publish_workflow_contract.py  test_supply_chain_current_workflow.py  test_supply_chain_env_contract.py  test_supply_chain_permission_contract.py  test_supply_chain_script_contract.py  test_supply_chain_trigger_contract.py  test_tag_and_artifact_contract.py
tests/rust_stub_exports/: _helpers.py  test_contract_guardrails.py  test_dispatch_mapping.py  test_export_surface.py  test_regression_anchors.py  test_source_contracts.py
